REST method enable supporter update milestone info
